[package]
name = "vec_historic"
version = "0.1.6"
edition = "2024"
authors = ["zieklass"]
description = "Rust Undo Collection"
license = "MIT OR Apache-2.0"
keywords = ["history", "gap", "undo", "vec", "gapbuffer"]
categories = ["data-structures"]
readme = "README.md"
repository = "https://github.com/executable1210/vec-historic"
homepage = "https://github.com/executable1210/vec-historic"
documentation = "https://docs.rs/vec-historic"

[lib]
path = "src/lib.rs"

[dependencies]
gapbuf = "0.1.4"
indexmap = "2.10.0"
